# pyspark-highspot

./: README.md  README.rst  edit.json  mixtape.json  pyproject.toml  requirements.txt
inputs/: edit.json
pyspark_highspot/: sparksession.py
schema/: edit_schema.json  source_schema.json
tests/: test_pyspark_highspot.py
