[tool.poetry]
name = "pyspark-highspot"
version = "0.1.0"
description = ""
authors = ["Anitha <hello.ani25@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
pyspark = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
